modules/gdscript/tests/scripts/analyzer/errors/dictionary_destructuring_with_type_mismatch.gd
func test():
    var a: int
    var b: int
    var { foo = a, bar = b } = { foo = "hello", bar = 42 }
